@startuml

package be.intecbrussel {
    package model {
        class Article {
        - String name
        - String author
        - int id
        {static}-int incrementId
        + Article()
        + Article(String name, String author,String date)
        + Article(String name, String author, int id)
        + getDate(): String
        + setDate(String date): void
        + getName(): String
        + setName(String name): void
        + getAuthor(): String
        + setAuthor(String author): void
        + getId(): int
        + setId(int id): void
        + toString(): String
        }

        class Client {
        - String name
        - int id
        {static}-int incrementId
        -List<Article> listArticles
        + Client()
        + Client(String name, int id)
        + getName(): String
        + setName(String name)
        + getId(): int
        + setId(int id)
        + getListArticles() : List<Article>
        + toString(): String
        }
    }

    package repository {
        class ArticleRepository {
        -List<Article> listArticle;
        +getArticles() : List<Article>
        }

        class ClientRepository {
        -List<Client> listClient;
        +getClients() : List<Client>
        }
    }

    package service {
        class ClientService {
        -ClientRepository clientRepository;
        +ClientService();
        +addClient(Client client) : String
        +removeClient(int id) : String
        +findClientById(int id) : Client
        + returnAllClients() : List<Client>
        }

        class ArticleService {
        - ArticleRepository articleRepository;
        - List<Article> clientArticles;
        + ArticleService ()
        + getClientArticles() : List<Article>;
        + borrowArticle (Article article) : String
        + returnArticle () : Article
        + addArticle (Article article) : String
        + removeArticle (int id) : String
        + findArticleById (int id): Article
        + sortArticles() : String
        + returnAllArticles() : List<Article>
        }
    }

    class BibliotheekApp {
        {static}-ArticleService ArticleService
        {static}-ClientService clientService
        {static}+main(String[] args)

    }

    ArticleService *-- ArticleRepository
    ClientService *-- ClientRepository
    BibliotheekApp o-- ArticleService
    BibliotheekApp o-- ClientService
}
@enduml